--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "react-native-svg-transformer": "^1.5.0",
+    "tailwindcss": "^3.3.2"
   },
   "name": "rebelthreads",
   "version": "1.0.0",
