--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-paper": "^5.12.5",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "3.10.0",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
