--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start" : "node app"
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
-    "nodemon": "^3.1.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
+    "nodemon": "^3.1.4",
+    "validator": "^13.12.0"
   }
 }
