--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
@@ -10,11 +13,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
   },
