--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
