--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
-    },
+    "start": "node index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon -e .js,.env index.js"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
@@ -13,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
