--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
@@ -22,7 +25,10 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
