--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
     "@expo/react-native-action-sheet": "^4.1.0",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -12,11 +13,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "expo": "^51.0.0",
+    "expo-camera": "^15.0.16",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
@@ -28,7 +32,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
