--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.1",
+    "amazon-s3-uri": "^0.1.1",
+    "aws-sdk": "^2.1691.0",
+    "aws-sdk-js-codemod": "^2.3.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,6 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.1.4",
     "validator": "^13.12.0"
   }
