--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,7 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -32,8 +33,7 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "@react-native-picker/picker": "2.7.5"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
