add feed screen

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,9 @@
     "expo": "^51.0.0",
     "expo-camera": "^15.0.16",
     "expo-image-picker": "^15.0.7",
+    "expo-sms": "^12.0.1",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
