--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "expo": "^51.0.0",
     "expo-camera": "^15.0.16",
     "expo-image-picker": "^15.0.7",
+    "expo-mail-composer": "^13.0.1",
     "expo-sms": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
