--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,7 @@
     "@expo/metro-runtime": "^3.1.1",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -13,7 +13,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "^51.0.0",
+    "expo": "~51.0.38",
     "expo-camera": "^15.0.16",
     "expo-image-picker": "^15.0.7",
     "expo-mail-composer": "^13.0.1",
