--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,7 +5,7 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -13,9 +13,9 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "^52.0.5",
-    "expo-camera": "~16.0.5",
-    "expo-image-picker": "~16.0.1",
+    "expo": "~52.0.11",
+    "expo-camera": "~16.0.7",
+    "expo-image-picker": "~16.0.3",
     "expo-mail-composer": "~14.0.1",
     "expo-sms": "~13.0.0",
     "expo-status-bar": "~2.0.0",
@@ -23,7 +23,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.3",
     "react-native-animatable": "^1.4.0",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -31,7 +31,7 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
