--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,12 +13,13 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "~52.0.11",
-    "expo-camera": "~16.0.7",
+    "expo": "^52.0.14",
+    "expo-camera": "^16.0.8",
     "expo-image-picker": "~16.0.3",
     "expo-mail-composer": "~14.0.1",
     "expo-sms": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.9",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
@@ -36,8 +37,7 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "expo-updates": "~0.26.9"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
